# hornet-bot

./: CMakeLists.txt  config-example.json
src/: main.cxx
src/bot/: bot.cxx  bot.hxx
src/commands/: commands.hxx  ping.cxx  say.cxx  shaw.cxx  stop.cxx
src/commands/utils/: utils.cxx  utils.hxx
